[package]
name = "coffeehouse"
version = "0.1.1"
authors = ["Wackyator <pratapsinghtarun9@gmail.com>"]
edition = "2018"
description = "A simple API wrapper for CoffeeHouse API"
readme = "./README.md"
homepage = "https://github.com/Wackyator/CoffeeHouse-Rust-API-Wrapper"
documentation = "https://docs.intellivoid.net/coffeehouse/v1/introduction"
repository = "https://github.com/Wackyator/CoffeeHouse-Rust-API-Wrapper/"
license = "MIT"
keywords = ["coffeehouse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
